# ulgenwanders.net

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  hugo.yml  justfile  pyproject.toml  zizmor.yml
.github/workflows/: git-hooks.yml  hugo.yaml
config/_default/: hugo.toml  languages.en.toml  markup.toml  menus.en.toml  params.toml
content/: search.md
content/posts/: a-very-small-tea-party.md  example-post.md  pixel-the-cat-learns-python.md
layouts/partials/: extend_head.html
